Hopefully unbreak overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,10 @@ body {
   background: linear-gradient(180deg, rgb(117, 81, 194), rgb(255, 255, 255));
   display: flex;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
-  justify-content: center;
-  align-items: center;
+  justify-content: center; /* horizontal center */
+  flex-direction: column;
 }
 
 main {
